# Repo_Intelligence_OS

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AUDIT_FINAL_SUMMARY.md  CHANGELOG.md  CHUNKING_FRAMEWORK_IMPLEMENTATION.md  CHUNK_PERSISTER_IMPLEMENTATION.md  CHUNK_SCHEMAS_IMPLEMENTATION.md  CLASS_CHUNKER_IMPLEMENTATION.md  DEVELOPMENT_STATUS.md  DOCUMENTATION_UPDATE_SUMMARY.md  EDGE_EXTRACTION_COMPLETE.md  FAILURE_AUDIT_REPORT.md  FINAL_VERIFICATION_REPORT.md  FINAL_VERIFICATION_SUMMARY.md  FUNCTION_CHUNKER_IMPLEMENTATION.md  GRAPH_API_COMPLETE.md  GRAPH_FRAMEWORK_COMPLETE.md  INTEGRATION_SUMMARY.md  KNOWLEDGE_GRAPH_DESIGN.md  KNOWLEDGE_GRAPH_FINAL_STATUS.md  KNOWLEDGE_GRAPH_SUMMARY.md  KNOWLEDGE_GRAPH_VERIFICATION_REPORT.md  LICENSE  NODE_EXTRACTION_COMPLETE.md  PARSER_SYSTEM_VERIFICATION.md  PIPELINE_ARCHITECTURE.md  PIPELINE_CHUNKING_EXTENSION.md  PIPELINE_INTEGRATION_COMPLETE.md  PIPELINE_QUICK_REFERENCE.md  PIPELINE_VERIFICATION_SUMMARY.md  README.md  REPOSITORY_CHUNK_DATABASE_IMPLEMENTATION.md  SEMANTIC_CHUNKING_DESIGN.md  TASK_10_SUMMARY.md  TASK_5_COMPLETE.md  TASK_6_COMPLETE.md  TASK_7_COMPLETE.md  TASK_8_COMPLETE.md  TASK_9_COMPLETE.md  (+4 more)
backend/: CPP_PARSER_COMPLETION_SUMMARY.md  C_PARSER_COMPLETION_SUMMARY.md  C_PARSER_IMPLEMENTATION.md  FINAL_SUMMARY.md  GO_PARSER_COMPLETION_SUMMARY.md  JAVA_PARSER_COMPLETION_SUMMARY.md  JAVA_PARSER_FINAL_REPORT.md  JAVA_PARSER_IMPLEMENTATION.md  RUST_PARSER_COMPLETION_SUMMARY.md  SYMBOL_EXTRACTION_INTEGRATION.md  VERIFICATION_RESULTS.md  check_tables.py  manual_parser_verification.py  pipeline_logic_verification.json  (+29 more)
(+188 files in other folders)
